--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="{{ page.url | prepend: site.url }}">
     <meta property="og:description" content="{{ site.description }}">
     <meta property="og:site_name" content="{{ site.title }}">
+    <link rel="canonical" href="{{ page.url | prepend: site.url }}">
     <link rel="stylesheet" href="//lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/normalize/6.0.0/normalize.min.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_271755_rdxzzo2kqwk.css">
     <link rel="stylesheet" href="{{ "/assets/css/github-markdown.css" | relative_url }}">
